--- a/bindings/jni/zyre-jni-native/build.gradle
+++ b/bindings/jni/zyre-jni-native/build.gradle
@@ -14,13 +14,7 @@ dependencies {
 //  Build section
 
 task copyLibs(type: Copy) {
-    def libraryPaths = System.getProperty('java.library.path').split(File.pathSeparator).toList()
-    libraryPaths.add('/usr/local/lib')
-    if (osdetector.os == 'windows') {
-        libraryPaths.add("${rootDir}/zyre-jni/build/Release")
-    } else {
-        libraryPaths.add("${rootDir}/zyre-jni/build")
-    }
+    def libraryPaths = []
     if (project.hasProperty('buildPrefix')) {
         if (osdetector.os == 'windows') {
             // DLLs are installed to the bin directory by cmake
@@ -29,6 +23,18 @@ task copyLibs(type: Copy) {
         libraryPaths.add("${project.buildPrefix}/lib")
     }
 
+    def javaLibraryPaths = System.getProperty('java.library.path').split(File.pathSeparator).toList()
+    libraryPaths.addAll (javaLibraryPaths)
+
+    libraryPaths.add('/usr/local/lib')
+    if (osdetector.os == 'windows') {
+        libraryPaths.add("${rootDir}/zyre-jni/build/Release")
+    } else {
+        libraryPaths.add("${rootDir}/zyre-jni/build")
+    }
+
+    def oldStrategy = duplicatesStrategy
+    duplicatesStrategy = DuplicatesStrategy.WARN
     libraryPaths.each { path ->
         from path
             include 'libzyrejni.so'
@@ -45,6 +51,7 @@ task copyLibs(type: Copy) {
             include '*czmq*.dll'
         into 'build/natives'
     }
+    duplicatesStrategy = oldStrategy
 }
 
 jar.baseName = "zyre-jni-${osdetector.classifier}"
